# PCBareun

./: .gitignore  LICENSE  README.md  build_errors.txt  debug_goclean.ps1  debug_output.txt  debug_procs.ps1  debug_procs_output.txt  index.html  package-lock.json  package.json  test_backend.ps1  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PROGRESS.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_optimizer.rs  autostart.rs  bsod.rs  context_menu.rs  dashboard.rs  debloat.rs  deep_uninstaller.rs  disk_health.rs  disk_usage.rs  dns.rs  duplicates.rs  env_manager.rs  force_delete.rs  hardware.rs  memory.rs  mod.rs  network.rs  port_monitor.rs  privacy.rs  process_booster.rs  programs.rs  protection.rs  registry.rs  scheduler.rs  secure_erase.rs  services.rs  shutdown.rs  software_updater.rs  startup.rs  temp_cleaner.rs  vhdx_compactor.rs  wincontrol.rs
src-tauri/src/utils/: cmd.rs  error.rs  mod.rs
src/i18n/: en.json  ja.json  ko.json  useT.ts
src/pages/: AiOptimizerPage.tsx  BsodAnalyzerPage.tsx  ContextMenuPage.tsx  CpuGpuTempPage.tsx  DashboardPage.tsx  DebloatPage.tsx  DeepUninstallerPage.tsx  DiskHealthPage.tsx  DiskPage.tsx  DiskVisualizerPage.tsx  DnsCheckPage.tsx  DuplicateFinderPage.tsx  EnvManagerPage.tsx  ForceDeletePage.tsx  NetworkPage.tsx  PortMonitorPage.tsx  PrivacyCleanerPage.tsx  ProcessBoosterPage.tsx  ProgramUninstallPage.tsx  RegistryCleanerPage.tsx  (+10 more)
(+15 files in other folders)
