[package]
name = "pc-bareun"
version = "0.1.0"
description = "PC Bareun - Modern PC Management Utility"
authors = ["Seonkyu"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pc_bareun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.35"
blake3 = "1.8.3"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2.6.0"
chrono = "0.4"
dirs = "5"
jwalk = "0.8"
